implemented test master and tested
